# gausspy

./: .coveralls.yml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  AGD_decomposer.py  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.md  README.rst  conda-environment.yml  readthedocs.yml  setup.cfg  setup.py  ~
.travis/: before_install_linux.sh  before_install_osx.sh
doc/: conf.py  dataprep.rst  index.rst  install.rst  method.rst  requirements.txt  tutorial.rst
doc/_build/doctrees/: environment.pickle  index.doctree  install.doctree
doc/_build/html/: dataprep.html  genindex.html  install.html  intro.html  searchindex.js
doc/_build/latex/: GaussPy.toc
doc/gausspy/: .travis.yml
docs/: Makefile  NewUser.txt  README.md  build.sh  conf.py  dataprep.rst  hybrid.rst  index.rst  install.rst  intro.rst  make.bat  method.rst  tutorial.rst
docs/_build/html/: .buildinfo  (+5 more)
docs/gausspy/: index.rst
examples/: README  decompose.py  decompose_double.py  example_data.pickle  make_data.py  plot_double.py  train.py
gausspy/: AGD_decomposer.py  __init__.py  batch_decomposition.py  gp.py  gradient_descent.py  ioASCII.py  ioHDF5.py  tvdiff.py  version.py
gausspy/tests/: agd_data_science.pickle  agd_data_science_decomposed.pickle  agd_data_train.pickle  batchdecomp_temp.pickle  import_scipy_minimize.py  test_examples.py
lib/: gsl-install.sh
lib/gsl-1.16/: Makefile  config.status  gsl-histogram  gsl-randist  libgsl.la  libtool
lib/lib/: libgsl.0.dylib  libgslcblas.dylib  libgslcblas.la
src/: tv.h  tvmethods.c  tvmodule.c
tests/: import_scipy_minimize.py.bak  test_examples.py  test_examples.py.bak
(+66 files in other folders)
