[metadata]
name = gausspy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 1.0
author = Robert R. Lindner and the GaussPy team
author_email = gausspy.software@gmail.com
description = Python package for applying Autonomous Gaussian Decomposition
long_description = Leveraging machine learning and derivative spectroscopy to perform autonomous decomposition of spectral line data
license = MIT
url = https://gausspy.readthedocs.io/en/latest/
edit_on_github = False
github_project = gausspy/gausspy
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
install_requires = astropy; numpy; scipy; lmfit; matplotlib; tqdm
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =
    
    astropy-package-template-example = packagename.example_mod:main
    

[options.package_data]
* = *.c
gausspy = data/*
gausspy.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
